# OpenGLStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: GLBaseSample.h
app/src/main/cpp/render/: GLRenderContext.cpp  GLRenderContext.h
app/src/main/cpp/sample/: EBORectangleSample.cpp  EBORectangleSample.h  TriangleSample.cpp  TriangleSample.h  VBOTriangleSample.cpp  VBOTriangleSample.h
app/src/main/cpp/utils/: LogUtils.h  ShaderUtils.cpp  ShaderUtils.h
app/src/main/java/com/yobin/ndkopenglstudy/: BasicActivity.java  BasicDetailActivity.java  BasicListActivity.java  MainActivity.java  SampleAdapter.java  TypeAdapter.java
app/src/main/java/com/yobin/ndkopenglstudy/render/: CommonGLRender.java  CommonSurfaceView.java  NativeGLRender.java
app/src/main/java/com/yobin/ndkopenglstudy/utils/: GLTypeConst.java
app/src/main/res/layout/: activity_basic_detail.xml  activity_basic_list.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
